[gd_scene load_steps=6 format=3 uid="uid://koq1yres26pm"]

[ext_resource type="Script" uid="uid://jmb2iurv240c" path="res://scripts/ui.gd" id="1_gdt2y"]
[ext_resource type="Texture2D" uid="uid://duh4nfytpn40t" path="res://assets/ui/visdev/Wasd1.PNG" id="1_yev5y"]
[ext_resource type="Texture2D" uid="uid://c3h8cue0jnn06" path="res://assets/ui/visdev/Wasd2.PNG" id="2_gdt2y"]
[ext_resource type="Texture2D" uid="uid://dihki807m6k3q" path="res://assets/ui/visdev/Wasd3.PNG" id="3_wm3ai"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_8dubc"]
frames = 3
speed_scale = 0.5
frame_0/texture = ExtResource("1_yev5y")
frame_0/duration = 0.1
frame_1/texture = ExtResource("2_gdt2y")
frame_1/duration = 0.1
frame_2/texture = ExtResource("3_wm3ai")
frame_2/duration = 0.1

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_gdt2y")

[node name="Wasd" type="TextureRect" parent="."]
offset_left = 880.0
offset_top = 422.0
offset_right = 1136.0
offset_bottom = 678.0
texture = SubResource("AnimatedTexture_8dubc")

[node name="FadeOnTime" type="Timer" parent="Wasd"]
one_shot = true

[node name="WaitToFadeTime" type="Timer" parent="Wasd"]
wait_time = 5.0
one_shot = true

[node name="FadeOffTime" type="Timer" parent="Wasd"]

[connection signal="timeout" from="Wasd/WaitToFadeTime" to="." method="_on_wait_to_fade_time_timeout"]
